deploy/w3f/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewards-studio-app
  namespace: rewards-studio
  labels:
    app.kubernetes.io/name: rewards-studio-app
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: rewards-studio-app
